--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
     <head>
         <title>Latihan Git DTS</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
+<body>
+    <h1>Hello World!</h1>
+</body>
 </html>
